feat(#172): implement get flag,option,package
